# CUDA-Parallel-Matrix-Multiplication

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  cuda_matrix_mult.cu  nsight_compute_config.ncu  numpy_comparison.py  profile.bat  profile.sh  run_benchmark.py  test_implementation.py
